kanisa/static/kanisa/css/kanisa.css
body {
    /* 60px to make the container go all the way to the bottom of the topbar */
    padding-top: 60px;
}

.thumbnail-caption {
    position: relative;
    margin-bottom: 8px;
}

.thumbnail-caption a {
    color: inherit;
}

.thumbnail-caption a:hover {
    text-decoration: inherit;
}

.kanisa_diary td {
    vertical-align: middle;
}

.kanisa_diary td div.notlast {
    padding-bottom: 3px;
}

.thumbnail .caption p.details {
    min-height: 3em;
    line-height: 1.5em;
}

h4 .subtitle {
    font-weight: normal;
}

label.requiredField {
    font-weight: bold;
}

.biblepassageresponse {
    margin-left: 1em;
}

.search-result {
    margin-bottom: 1em;
}

.search-result blockquote {
    font-size: 1em;
}

